--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,1 +1,13 @@
 # Dockerfile
+FROM python:3.11-slim
+
+WORKDIR /api
+
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+COPY ./app ./app
+
+EXPOSE 5000
+
+CMD ["python", "app/main.py"]
