--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,37 @@
 # Utiliza https://gitignore.io/ para crear este archivo según la tecnología que vas a utilizar
+
+# Bytecode de Python
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Entornos virtuales
+.venv/
+env/
+venv/
+ENV/
+Pipfile.lock
+
+# Config de entorno y secretos
+.env
+*.env
+
+# Archivos de base de datos locales
+*.sqlite3
+
+# Archivos temporales
+*.log
+*.bak
+*.tmp
+.DS_Store
+
+# Archivos de test
+.coverage
+htmlcov/
+.pytest_cache/
+
+# Docker
+*.pid
+*.tar
+*.img
+*.container
