Creacion de users get y login, con jwt

--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,5 +1,8 @@
-Flask
-Flask_SQLAlchemy
+fastapi
+uvicorn[standard]
+sqlalchemy
 psycopg2-binary
-Flask-Cors
+pydantic
 python-dotenv
+python-jose[cryptography]
+passlib[bcrypt]
