--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -8,6 +8,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY ./app ./app
 
-EXPOSE 5000
+EXPOSE 8000
 
-CMD ["python", "app/main.py"]
+CMD ["python", "-m", "app.main"]
