--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,17 +7,32 @@ services:
       POSTGRES_PASSWORD: postgres
     volumes:
       - pgdata:/var/lib/postgresql/data
+  
   api:
-      build: ./api
-      depends_on:
-        - database
-      environment:
-        FLASK_ENV: development
-        DATABASE_URL: postgresql://postgres:postgres@database:5432/blogdb
-      ports:
-        - "8000:8000"
-      volumes:
-        - ./api:/api
-      working_dir: /api
+    build: ./api
+    depends_on:
+      - database
+    environment:
+      FLASK_ENV: development
+      DATABASE_URL: postgresql://postgres:postgres@database:5432/blogdb
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./api:/api
+    working_dir: /api
+  
+  react-app:
+    build: ./web/app
+    ports:
+      - "5173:5173"
+    volumes:
+      - ./web:/app
+      - /app/node_modules
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    depends_on:
+      - api
+      - database
+
 volumes:
   pgdata:
