Fix issue swagger login authorize

--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard]
 sqlalchemy
 psycopg2-binary
 pydantic
+python-multipart
 python-dotenv
 python-jose[cryptography]
 passlib[bcrypt]
