--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -1,1 +1,19 @@
 # nginx.conf
+events {}
+
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
+
+    server {
+        listen 80;
+
+        root /usr/share/nginx/html;
+        index index.html;
+
+        # 🔄 Soporte para React Router (SPA)
+        location / {
+            try_files $uri /index.html;
+        }
+    }
+}
