--- a/web/app/package.json
+++ b/web/app/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "dotenv": "^16.5.0",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
+    "react-quill": "^2.0.0",
     "react-router": "^7.5.0"
   },
   "devDependencies": {
