--- a/web/app/package.json
+++ b/web/app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "dotenv": "^16.5.0",
+    "js-cookie": "^3.0.5",
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
